<resources>
    <string name="app_name">Gamastik</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_quiz">Quiz</string>
    <string name="insert_your_email">Insert your E-mail</string>
    <string name="gamastik">GAMASTIK</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="insert_your_password">Insert your Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="tap_here">Tap here</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account">Dont have an account? Please</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="insert_your_name">Insert your name</string>
    <string name="insert_your_new_password">Insert your new password</string>
    <string name="insert_your_new_password_again">Insert your new password again</string>
    <string name="re_password">Re-password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="catch_the_quiz_now">Catch the Quiz Now!</string>
    <string name="play_the_quiz">Play the Quiz</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="your_friend_1">Your Friend 1</string>
    <string name="score_s">Score’s</string>
    <string name="your_score">Your Score</string>
    <string name="_75">75</string>
    <string name="percent">%</string>
    <string name="back_button">Back Button</string>
    <string name="text_discover_batik_indonesia">Discover Batik Indonesia</string>
    <string name="text_hint_search">Search batik here ...</string>
    <string name="text_by_region">By Region</string>
    <string name="text_sample_regio">Jawa Barat</string>
    <string name="text_top_batik">Top Batik</string>
    <string name="text_see_product_recommendations">See product recommendations</string>
    <string name="text_result">Result</string>
    <string name="text_submit">Submit</string>
    <string name="text_b">B</string>
    <string name="text_a">A</string>
    <string name="text_c">C</string>
    <string name="text_d">D</string>
    <string name="finish">Finish</string>
    <string name="next_question">Go to Next Question</string>
    <string name="splas_screen">splas screen</string>
</resources>