<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F1EF"
    android:padding="12dp"
    tools:context=".ui.feature.quiz.quizscore.QuizScoreActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/banner_score_quiz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="95dp"
                android:contentDescription="@string/catch_the_quiz_now"
                android:src="@drawable/banner_score_quiz"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/line"
                android:layout_width="276dp"
                android:layout_height="1dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/line"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/banner_score_quiz"
                tools:ignore="ContentDescription" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_banner_score"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="#FD7F39"
                app:cardCornerRadius="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="12dp">

                    <TextView
                        android:id="@+id/label_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_medium"
                        android:text="@string/your_score"
                        android:textColor="@color/white"
                        android:textSize="@dimen/large_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.mikhaellopez.circularprogressbar.CircularProgressBar
                        android:id="@+id/circularProgressBar"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        app:cpb_background_progressbar_color="#F5F1EF"
                        app:cpb_background_progressbar_width="20dp"
                        app:cpb_progress="100"
                        app:cpb_progress_direction="to_right"
                        app:cpb_progress_max="1000"
                        app:cpb_progressbar_color="#5AA9F1"
                        app:cpb_progressbar_width="18dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/label_score" />

                    <TextView
                        android:id="@+id/tv_score_result"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_medium"
                        android:text="@string/_75"
                        android:textColor="@color/white"
                        android:textSize="36sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/circularProgressBar"
                        app:layout_constraintEnd_toStartOf="@+id/percent"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toEndOf="@+id/circularProgressBar"
                        app:layout_constraintStart_toStartOf="@+id/circularProgressBar"
                        app:layout_constraintTop_toTopOf="@+id/circularProgressBar" />

                    <TextView
                        android:id="@+id/percent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_medium"
                        android:text="@string/percent"
                        android:textColor="@color/white"
                        android:textSize="36sp"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="@+id/circularProgressBar"
                        app:layout_constraintEnd_toEndOf="@+id/circularProgressBar"
                        app:layout_constraintStart_toEndOf="@+id/tv_score_result"
                        app:layout_constraintTop_toTopOf="@+id/circularProgressBar" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_banner_score"
                tools:listitem="@layout/item_list_leaderboard" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:contentDescription="@string/back_button"
        android:src="@drawable/icon_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>